# RayirthRajput_EnC_Inductions

./: README.md
PCB/: README.md
PCB/Problem _1/: Kratos_week2.kicad_sch
PCB/Problem_2/: Kratos_Problem2_ESP32S3.kicad_pcb  Kratos_Problem2_ESP32S3.kicad_prl  Kratos_Problem2_ESP32S3.kicad_pro  Kratos_Problem2_ESP32S3.kicad_sch  fp-lib-table  ~Kratos_Problem2_ESP32S3.kicad_pcb.lck
PCB/Week2/: Kratos_week2.kicad_pro  fp-lib-table  sym-lib-table
Week2/: README.md  TCA9548A_MODULE.kicad_mod
Week_3/kratos_rayirth/: CMakeLists.txt  package.xml
Week_3/kratos_rayirth/src/: rover_status_msg_publisher.py  rover_status_msg_subscriber.py  rover_status_publisher.py  rover_status_subscriber.py
Week_3/kratos_rayirth_msgs/: CMakeLists.txt  package.xml
Week_3/kratos_rayirth_msgs/msg/: RoverStatus.msg
Week_4/week4_rover_control/scripts/: double_ackermann.py
libs/: Kratos_Custom.kicad_sym  README.md
libs/Problem_2/: HC_SR04_MODULE.kicad_mod  MPU6050_MODULE.kicad_mod
